<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable name="dialogTitle" type="String" />
        <variable name="dialogText" type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGameDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearGameDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_dialog_box"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="30dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/imgDialogFirst"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:animatedGif="@{dialogTitle}" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@{dialogText}"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/gameDialogLevelOrCorrectText"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/imgDialogSecond"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:animatedGif="@{dialogTitle}" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnDialogPremium"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/shape_dialog_option"
                        android:drawableStart="@drawable/dialog_button_premium"
                        android:paddingStart="5dp"
                        android:paddingEnd="15dp"
                        android:text="@string/useBonus"
                        android:textAllCaps="false"
                        android:textColor="#555555"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnDialogRestart"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/shape_dialog_option"
                        android:drawableStart="@drawable/dialog_button_restart"
                        android:paddingStart="5dp"
                        android:paddingEnd="15dp"
                        android:text="@string/tryAgain"
                        android:textAllCaps="false"
                        android:textColor="#555555"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnDialogExit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/shape_dialog_option"
                        android:drawableStart="@drawable/dialog_button_exit"
                        android:paddingStart="5dp"
                        android:paddingEnd="15dp"
                        android:text="@string/returnMainMenu"
                        android:textAllCaps="false"
                        android:textColor="#555555"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_dialog_option"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@{dialogTitle}"
            android:textAlignment="center"
            android:textColor="@color/gameDialogTypeText"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintGameDialog"
            app:layout_constraintEnd_toEndOf="@+id/constraintGameDialog"
            app:layout_constraintStart_toStartOf="@+id/constraintGameDialog"
            app:layout_constraintTop_toTopOf="@+id/constraintGameDialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
